# MDReader

./: .gitignore  .gitleaks.toml  .preflight.toml  CLAUDE.md  project.yml
.claude/skills/save/: SKILL.md
.github/workflows/: mirror-to-codeberg.yml
MDReader-linux/: pyproject.toml
MDReader-linux/src/mdreader_linux/: __init__.py  __main__.py  application.py  document.py  document_tab.py  html_template.py  main_window.py  renderer.py
MDReader-linux/src/mdreader_linux/resources/: markdown.css
MDReader.xcodeproj/: project.pbxproj
MDReader/Resources/: markdown.css
MDReader/Utilities/: MarkdownRenderer.swift
MDReader/ViewModels/: DocumentViewModel.swift
MDReader/Views/: DocumentView.swift  MarkdownWebView.swift
internal/: linux-port-plan.md
