[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdreader-linux"
version = "3.2.0"
description = "Read-only markdown viewer for Linux (companion to MDReader for macOS)"
requires-python = ">=3.11"
authors = [
    { name = "Hassan Alsheikh" },
]
keywords = ["markdown", "viewer", "qt", "pyside6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "PySide6>=6.6",
    "cmarkgfm>=2024.1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mdreader-linux = "mdreader_linux.application:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mdreader_linux"]
